--- a/README
+++ b/README
@@ -1,1 +1,5 @@
 I couldn't find a python library for the picplz API, so I started one. Doesn't really work yet, will update README when this becomes useful.
+
+BB: I've used existing lib as base for missing features. 
+
+#support for picplz upload from url , not only from file
